fixed: highlights of likes on mobile, skeleton in create post area, added: catch all route

--- a/notepost/src/components/styles/Like.css
+++ b/notepost/src/components/styles/Like.css
@@ -10,11 +10,13 @@
     cursor: pointer;
     font-size: 1rem;
     color: #dbdbdb;
+    user-select: none;
 }
 
 .favourite svg {
     width: 1rem;
     margin-left: 0.5rem;
+    user-select: none;
 }
 
 #isFavourite {
