--- a/notepost/src/components/styles/Topic.css
+++ b/notepost/src/components/styles/Topic.css
@@ -28,6 +28,11 @@
     transform: translate(2px, 2px);
 }
 
+.topic_container .topic_button.active {
+    background-color: #ffffff0c;
+    transform: translate(2px, 2px);
+}
+
 @media (hover: none) {
     .topic_container .topic_button.active {
         background-color: #ffffff0c;
